[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "Wordle built with Python"
authors = ["Will-Hoey <will.hoey@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Random-Word = "^1.0.10"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
